--- a/views/index.erb
+++ b/views/index.erb
@@ -14,7 +14,7 @@
 
     <a href="/killSwitch" class="btn btn-danger btn-large">Kill Switch</a>
 
-    <h2>Cloudfoundry App Instance Info: </h2>
+    <h2>App Instance Info: </h2>
 
     <table class="table table-striped table-hover">
     	<tr><td><strong>App Name</strong></td><td><%= ENV['APP_NAME'] %></td></tr>
