updated some text

--- a/views/index.erb
+++ b/views/index.erb
@@ -9,7 +9,7 @@
     <div class="hero-unit">
         <h1>Cloud Foundry Scale Demo</h1>
 
-        <p>Powered by <a href="http://www.pivotal.io">Pivotal</a>!</p>
+        <p>Powered by <a href="http://www.pivotal.io">Pivotal Cloudfoundry Workshop</a>!</p>
     </div>
 
     <a href="/killSwitch" class="btn btn-danger btn-large">Kill Switch</a>
