--- a/views/index.erb
+++ b/views/index.erb
@@ -12,7 +12,7 @@
         <p>Powered by <a href="http://www.pivotal.io">Pivotal</a>!</p>
     </div>
 
-    <a href="/killSwitch" class="btn btn-danger btn-large">Self Destruct!!</a>
+    <a href="/killSwitch" class="btn btn-danger btn-large">Kill Switch</a>
 
     <h2>App Instance Info: </h2>
 
