--- a/views/index.erb
+++ b/views/index.erb
@@ -7,7 +7,7 @@
 <body>
 <div class="container">
     <div class="hero-unit">
-        <h1>Cloud Foundry Scale Demo</h1>
+        <h1>Adam;s Cloud Foundry Scale Demo</h1>
 
         <p>Powered by <a href="http://www.pivotal.io">Pivotal</a>!</p>
     </div>
@@ -18,13 +18,14 @@
 
     <table class="table table-striped table-hover">
     	<tr><td><strong>App Name</strong></td><td><%= ENV['APP_NAME'] %></td></tr>
-    	<tr class="info"><td><strong>Instance</strong></td><td th:text="${instance}"><%= ENV['APP_INSTANCE'] %></td></tr>
+      <tr class="info"><td><strong>Instance GUID</strong></td><td th:text="${instance}"><%= ENV['APP_INSTANCE_ID'] %></td></tr>
+    	<tr class="info"><td><strong>Instance ID</strong></td><td th:text="${instance}"><%= ENV['APP_INSTANCE_INDEX'] %></td></tr>
     	<tr><td><strong>Memory Allocated</strong></td><td th:text="${memory}"><%= ENV['APP_MEM'] %></td></tr>
     	<tr><td><strong>Disk Allocated</strong></td><td th:text="${disk}"><%= ENV['APP_DISK'] %></td></tr>
     	<tr><td><strong>Warden Container IP</strong></td><td th:text="${ipAddress}"><%= ENV['APP_IP'] %></td></tr>
     	<tr><td><strong>Warden Container Port</strong></td><td th:text="${port}"><%= ENV['APP_PORT'] %></td></tr>
     	<tr class="info"><td><strong>Requests Serviced</strong></td><td><%= settings.requests %></td></tr>
-      <tr><td><strong>Warden Container Port</strong></td><td th:text="${port}"><%= ENV['APP_PORT'] %></td></tr>
+      <tr><td><strong>Warden Container Started At</strong></td><td th:text="${port}"><%= ENV['APP_START'] %></td></tr>
       <tr><td><strong>VCAP_SERVICES</strong></td><td style="word-break:break-all;"><pre><%= ENV['SERVICE_JSON'] %></pre></td></tr>
     </table>
 
