--- a/views/index.erb
+++ b/views/index.erb
@@ -7,7 +7,7 @@
 <body>
 <div class="container">
     <div class="hero-unit">
-        <h1>Adam;s Cloud Foundry Scale Demo</h1>
+        <h1>Adam's Cloud Foundry Scale Demo</h1>
 
         <p>Powered by <a href="http://www.pivotal.io">Pivotal</a>!</p>
     </div>
